--- a/src/components/View.css
+++ b/src/components/View.css
@@ -3,3 +3,13 @@
     color: white; /* टेक्स्ट को सफेद करने के लिए */
   }
   
+  /* Hide scrollbar for Chrome, Safari and Opera */
+.custom-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.custom-scrollbar {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
